--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <title>watermelon facts</title>
   </head>
@@ -14,6 +13,79 @@
           <a href="#">Watermelon Facts</a>
       </nav>
     </div>
+    <div class="container">
+
+      <div class="row">
+        <div class="col s12 m6 l3">
+          <div class="card medium">
+            <div class="card-image">
+              <img src="watermelon-snow.jpg">
+            </div>
+            <div class="card-content">
+              <span class="card-title">Watermelon Snow</span>
+              <p>Watermlon snow is Chlamydomonas nivalis, a species of green algae
+                containing a secondary red carotenoid pigment (astaxanthin) in
+                addition to chlorophyll. Unlike most species of fresh-water algae,
+                it is cryophillic (cold-loving) and thrives in freezing water.
+                Its specific epithet, nivalis, is from Latin and refers to snow.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m6 l3">
+          <div class="card medium">
+            <div class="card-image">
+              <img src="watermelon-snow.jpg">
+            </div>
+            <div class="card-content">
+              <span class="card-title">Watermelon Snow</span>
+              <p>Watermlon snow is Chlamydomonas nivalis, a species of green algae
+                containing a secondary red carotenoid pigment (astaxanthin) in
+                addition to chlorophyll. Unlike most species of fresh-water algae,
+                it is cryophillic (cold-loving) and thrives in freezing water.
+                Its specific epithet, nivalis, is from Latin and refers to snow.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m6 l3">
+          <div class="card medium">
+            <div class="card-image">
+              <img src="watermelon-snow.jpg">
+            </div>
+            <div class="card-content">
+              <span class="card-title">Watermelon Snow</span>
+              <p>Watermlon snow is Chlamydomonas nivalis, a species of green algae
+                containing a secondary red carotenoid pigment (astaxanthin) in
+                addition to chlorophyll. Unlike most species of fresh-water algae,
+                it is cryophillic (cold-loving) and thrives in freezing water.
+                Its specific epithet, nivalis, is from Latin and refers to snow.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m6 l3">
+          <div class="card medium">
+            <div class="card-image">
+              <img src="watermelon-snow.jpg">
+            </div>
+            <div class="card-content">
+              <span class="card-title">Watermelon Snow</span>
+              <p>Watermlon snow is Chlamydomonas nivalis, a species of green algae
+                containing a secondary red carotenoid pigment (astaxanthin) in
+                addition to chlorophyll. Unlike most species of fresh-water algae,
+                it is cryophillic (cold-loving) and thrives in freezing water.
+                Its specific epithet, nivalis, is from Latin and refers to snow.
+              </p>
+            </div>
+          </div>
+        </div>
+
+    </div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     <script src="main.js" charset="utf-8"></script>
