Make mobile responsive

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
       <div class="row">
         <div class="col s12 m6 l3">
-          <div class="card medium">
+          <div class="card">
             <div class="card-image">
-              <img src="watermelon-snow.jpg">
+              <img class="image" src="watermelon-snow.jpg">
             </div>
             <div class="card-content">
-              <span class="card-title">Watermelon Snow</span>
+              <span class="caption">Watermelon Snow</span>
               <p>Watermlon snow is Chlamydomonas nivalis, a species of green algae
                 containing a secondary red carotenoid pigment (astaxanthin) in
                 addition to chlorophyll. Unlike most species of fresh-water algae,
@@ -34,12 +34,26 @@
         </div>
 
         <div class="col s12 m6 l3">
-          <div class="card medium">
+          <div class="card">
             <div class="card-image">
-              <img src="watermelon-snow.jpg">
+              <img class="image" src="fruit-of-the-king.png">
             </div>
             <div class="card-content">
-              <span class="card-title">Watermelon Snow</span>
+              <span class="caption">The Fruit of the Kings</span>
+              <p>The first recorded watermelon harvest occurred nearly 5,000 years
+                ago in Egypt.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m6 l3">
+          <div class="card">
+            <div class="card-image">
+              <img class="image" src="watermelon-snow.jpg">
+            </div>
+            <div class="card-content">
+              <span class="caption">Watermelon Snow</span>
               <p>Watermlon snow is Chlamydomonas nivalis, a species of green algae
                 containing a secondary red carotenoid pigment (astaxanthin) in
                 addition to chlorophyll. Unlike most species of fresh-water algae,
@@ -51,12 +65,26 @@
         </div>
 
         <div class="col s12 m6 l3">
-          <div class="card medium">
+          <div class="card">
             <div class="card-image">
-              <img src="watermelon-snow.jpg">
+              <img class="image" src="fruit-of-the-king.png">
             </div>
             <div class="card-content">
-              <span class="card-title">Watermelon Snow</span>
+              <span class="caption">The Fruit of the Kings</span>
+              <p>The first recorded watermelon harvest occurred nearly 5,000 years
+                ago in Egypt.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m6 l3">
+          <div class="card">
+            <div class="card-image">
+              <img class="image" src="watermelon-snow.jpg">
+            </div>
+            <div class="card-content">
+              <span class="caption">Watermelon Snow</span>
               <p>Watermlon snow is Chlamydomonas nivalis, a species of green algae
                 containing a secondary red carotenoid pigment (astaxanthin) in
                 addition to chlorophyll. Unlike most species of fresh-water algae,
@@ -68,17 +96,107 @@
         </div>
 
         <div class="col s12 m6 l3">
-          <div class="card medium">
+          <div class="card">
             <div class="card-image">
-              <img src="watermelon-snow.jpg">
+              <img class="image" src="fruit-of-the-king.png">
             </div>
             <div class="card-content">
-              <span class="card-title">Watermelon Snow</span>
+              <span class="caption">The Fruit of the Kings</span>
+              <p>The first recorded watermelon harvest occurred nearly 5,000 years
+                ago in Egypt.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m6 l3">
+          <div class="card">
+            <div class="card-image">
+              <img class="image" src="watermelon-snow.jpg">
+            </div>
+            <div class="card-content">
+              <span class="caption">Watermelon Snow</span>
               <p>Watermlon snow is Chlamydomonas nivalis, a species of green algae
                 containing a secondary red carotenoid pigment (astaxanthin) in
                 addition to chlorophyll. Unlike most species of fresh-water algae,
                 it is cryophillic (cold-loving) and thrives in freezing water.
                 Its specific epithet, nivalis, is from Latin and refers to snow.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m6 l3">
+          <div class="card">
+            <div class="card-image">
+              <img class="image" src="fruit-of-the-king.png">
+            </div>
+            <div class="card-content">
+              <span class="caption">The Fruit of the Kings</span>
+              <p>The first recorded watermelon harvest occurred nearly 5,000 years
+                ago in Egypt.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m6 l3">
+          <div class="card">
+            <div class="card-image">
+              <img class="image" src="watermelon-snow.jpg">
+            </div>
+            <div class="card-content">
+              <span class="caption">Watermelon Snow</span>
+              <p>Watermlon snow is Chlamydomonas nivalis, a species of green algae
+                containing a secondary red carotenoid pigment (astaxanthin) in
+                addition to chlorophyll. Unlike most species of fresh-water algae,
+                it is cryophillic (cold-loving) and thrives in freezing water.
+                Its specific epithet, nivalis, is from Latin and refers to snow.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m6 l3">
+          <div class="card">
+            <div class="card-image">
+              <img class="image" src="fruit-of-the-king.png">
+            </div>
+            <div class="card-content">
+              <span class="caption">The Fruit of the Kings</span>
+              <p>The first recorded watermelon harvest occurred nearly 5,000 years
+                ago in Egypt.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m6 l3">
+          <div class="card">
+            <div class="card-image">
+              <img class="image" src="watermelon-snow.jpg">
+            </div>
+            <div class="card-content">
+              <span class="caption">Watermelon Snow</span>
+              <p>Watermlon snow is Chlamydomonas nivalis, a species of green algae
+                containing a secondary red carotenoid pigment (astaxanthin) in
+                addition to chlorophyll. Unlike most species of fresh-water algae,
+                it is cryophillic (cold-loving) and thrives in freezing water.
+                Its specific epithet, nivalis, is from Latin and refers to snow.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m6 l3">
+          <div class="card">
+            <div class="card-image">
+              <img class="image" src="fruit-of-the-king.png">
+            </div>
+            <div class="card-content">
+              <span class="caption">The Fruit of the Kings</span>
+              <p>The first recorded watermelon harvest occurred nearly 5,000 years
+                ago in Egypt.
               </p>
             </div>
           </div>
