--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
-    <title>watermelon facts</title>
+    <link href="main.css" rel="stylesheet">
+    <title>Watermelon Facts</title>
   </head>
   <body>
     <div class="navbar-fixed">
@@ -13,6 +14,22 @@
           <a href="#">Watermelon Facts</a>
       </nav>
     </div>
+
+      <ul id="slide-out" class="sidenav">
+        <li><div class="user-view">
+          <div class="background">
+          </div>
+          <a href="#name"><span class="white-text name">Farmer Fred</span></a>
+          <a href="#email"><span class="white-text email">farmerfred@gmail.com</span></a>
+        </div></li>
+        <li><a href="#!">About</a></li>
+        <li><a href="#!">Services</a></li>
+        <li><div class="divider"></div></li>
+        <li><a class="subheader">Clients</a></li>
+        <li><a class="waves-effect" href="#!">Testimonials</a></li>
+      </ul>
+      <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons red-text text-accent-2">menu</i></a>
+
     <div class="container">
 
       <div class="row">
@@ -36,7 +53,7 @@
         <div class="col s12 m6 l3">
           <div class="card">
             <div class="card-image">
-              <img class="image" src="fruit-of-the-king.png">
+              <img class="image" src="fruit-of-the-kings.png">
             </div>
             <div class="card-content">
               <span class="caption">The Fruit of the Kings</span>
@@ -67,7 +84,7 @@
         <div class="col s12 m6 l3">
           <div class="card">
             <div class="card-image">
-              <img class="image" src="fruit-of-the-king.png">
+              <img class="image" src="fruit-of-the-kings.png">
             </div>
             <div class="card-content">
               <span class="caption">The Fruit of the Kings</span>
@@ -98,7 +115,7 @@
         <div class="col s12 m6 l3">
           <div class="card">
             <div class="card-image">
-              <img class="image" src="fruit-of-the-king.png">
+              <img class="image" src="fruit-of-the-kings.png">
             </div>
             <div class="card-content">
               <span class="caption">The Fruit of the Kings</span>
@@ -129,7 +146,7 @@
         <div class="col s12 m6 l3">
           <div class="card">
             <div class="card-image">
-              <img class="image" src="fruit-of-the-king.png">
+              <img class="image" src="fruit-of-the-kings.png">
             </div>
             <div class="card-content">
               <span class="caption">The Fruit of the Kings</span>
@@ -160,7 +177,7 @@
         <div class="col s12 m6 l3">
           <div class="card">
             <div class="card-image">
-              <img class="image" src="fruit-of-the-king.png">
+              <img class="image" src="fruit-of-the-kings.png">
             </div>
             <div class="card-content">
               <span class="caption">The Fruit of the Kings</span>
@@ -191,7 +208,7 @@
         <div class="col s12 m6 l3">
           <div class="card">
             <div class="card-image">
-              <img class="image" src="fruit-of-the-king.png">
+              <img class="image" src="fruit-of-the-kings.png">
             </div>
             <div class="card-content">
               <span class="caption">The Fruit of the Kings</span>
@@ -204,11 +221,10 @@
 
     </div>
 
-    <!-- Modal Structure -->
     <div id="modal1" class="modal">
       <div class="modal-content">
-        <h4>watermelons!!!1</h4>
-        <p>yum</p>
+        <h4>do you love watermelons?</h4>
+        <p>you know you do.</p>
       </div>
       <div class="modal-footer">
         <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
