Add image carousel

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
       </ul>
       <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons red-text text-accent-2">menu</i></a>
 
+      <div class="carousel">
+        <a class="carousel-item" href="#one!"><img src="carousel/watermelon-0.jpg"></a>
+        <a class="carousel-item" href="#one!"><img src="carousel/watermelon-1.jpg"></a>
+        <a class="carousel-item" href="#one!"><img src="carousel/watermelon-2.jpg"></a>
+        <a class="carousel-item" href="#one!"><img src="carousel/watermelon-3.jpg"></a>
+        <a class="carousel-item" href="#one!"><img src="carousel/watermelon-4.jpg"></a>
+      </div>
+
     <div class="container">
 
       <div class="row">
